--- a/climate_analysis.ipynb
+++ b/climate_analysis.ipynb
@@ -5102,7 +5102,9 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -5123,132 +5125,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "# reflect an existing database into a new model\n",
-    "\n",
-    "# reflect the tables\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# We can view all of the classes that automap found\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Save references to each table\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Create our session (link) from Python to the DB\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Exploratory Climate Analysis"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Design a query to retrieve the last 12 months of precipitation data and plot the results. \n",
-    "#Starting from the last data point in the database. \n",
-    "\n",
-    "# Calculate the date one year from the last date in data set.\n",
-    "\n",
-    "# Perform a query to retrieve the data and precipitation scores\n",
-    "\n",
-    "# Save the query results as a Pandas DataFrame and set the index to the date column\n",
-    "\n",
-    "# Sort the dataframe by date\n",
-    "\n",
-    "# Use Pandas Plotting with Matplotlib to plot the data\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Use Pandas to calcualte the summary statistics for the precipitation data\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# How many stations are available in this dataset?\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# What are the most active stations?\n",
-    "# List the stations and the counts in descending order.\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Using the station id from the previous query, calculate the lowest temperature recorded, \n",
-    "# highest temperature recorded, and average temperature most active station?\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Choose the station with the highest number of temperature observations.\n",
-    "# Query the last 12 months of temperature observation data for this station and plot the results as a histogram\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[71.0, 77.21989528795811, 83.0]"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Write a function called `calc_temps` that will accept start date and end date in the format '%Y-%m-%d' \n",
-    "# and return the minimum, average, and maximum temperatures for that range of dates\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Challenge"
+    "# and return the minimum, average, and maximum temperatures for that range of dates\n",
+    "def calc_temps(start=None, end=None):\n",
+    "    sel = [func.min(Measurement.tobs), func.avg(Measurement.tobs), func.max(Measurement.tobs)]\n",
+    "\n",
+    "    results = session.query(*sel).\\\n",
+    "        filter(Measurement.date >= start).\\\n",
+    "        filter(Measurement.date <= end).all()\n",
+    "    temps = list(np.ravel(results))\n",
+    "    return temps\n",
+    "\n",
+    "calc_temps(\"2017-06-01\",\"2017-06-30\")"
    ]
   },
   {
